<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceProviderInfo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_MandatoryFieldsWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fields_marked_with_are_mandatory_and_must_be_filled"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_EnteredAddress"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="395dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText_EnteredPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText_EnteredBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/general_description"
            android:inputType="textMultiLine"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Info"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/are_you_licensed" />

            <Spinner
                android:id="@+id/spinner_Licensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />

            <CheckBox
                android:id="@+id/checkBox_Monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday" />

            <CheckBox
                android:id="@+id/checkBox_Tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday" />

            <CheckBox
                android:id="@+id/checkBox_Wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday" />

            <CheckBox
                android:id="@+id/checkBox_Thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday" />

            <CheckBox
                android:id="@+id/checkBox_Friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday" />

            <CheckBox
                android:id="@+id/checkBox_Saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_SubmitServiceProviderInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|start"
        android:onClick="onClick"
        android:paddingTop="20dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.24" />

</android.support.constraint.ConstraintLayout>